--- a/templates/index - Copy.html
+++ b/templates/index - Copy.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   </head>
   <body>
+    <form id="csvForm" action="/generate" method="POST" enctype="multipart/form-data">
     <div
       class="relative flex size-full min-h-screen flex-col bg-[#1A1A1A] dark group/design-root overflow-x-hidden"
       style='--select-button-svg: url(&apos;data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 width=%2724px%27 height=%2724px%27 fill=%27rgb(153,153,153)%27 viewBox=%270 0 256 256%27%3e%3cpath d=%27M181.66,170.34a8,8,0,0,1,0,11.32l-48,48a8,8,0,0,1-11.32,0l-48-48a8,8,0,0,1,11.32-11.32L128,212.69l42.34-42.35A8,8,0,0,1,181.66,170.34Zm-96-84.68L128,43.31l42.34,42.35a8,8,0,0,0,11.32-11.32l-48-48a8,8,0,0,0-11.32,0l-48,48A8,8,0,0,0,85.66,85.66Z%27%3e%3c/path%3e%3c/svg%3e&apos;); font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif;'
@@ -67,7 +68,7 @@
               <label for="file1" class="flex flex-col min-w-40 flex-1">
                 <p class="text-[#FFFFFF] text-base font-medium leading-normal pb-2">Upload File 1:</p>
                 <input
-                  placeholder="Upload File 1" type="file" name="file1" id="file1"
+                  placeholder="Upload File 1" type="file" name="file1" id="file1" accept=".csv" required
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#FFFFFF] focus:outline-0 focus:ring-0 border border-[#3D3D3D] bg-[#242424] focus:border-[#3D3D3D] h-14 placeholder:text-[#999999] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
@@ -77,7 +78,7 @@
               <label class="flex flex-col min-w-40 flex-1">
                 <p class="text-[#FFFFFF] text-base font-medium leading-normal pb-2">Upload File 2:</p>
                 <input
-                  placeholder="Upload File 2" type="file" name="file2" id="file2"
+                  placeholder="Upload File 2" type="file" name="file2" id="file2" accept=".csv" required
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#FFFFFF] focus:outline-0 focus:ring-0 border border-[#3D3D3D] bg-[#242424] focus:border-[#3D3D3D] h-14 placeholder:text-[#999999] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
@@ -149,10 +150,10 @@
             
             <!-- Generate Button -->
             <div class="flex px-4 py-3 justify-center">
-              <button
+              <button type="submit"
                 class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-5 flex-1 bg-[#019863] text-[#FFFFFF] text-base font-bold leading-normal tracking-[0.015em]"
               >
-                <span class="truncate">Deploy</span>
+                <span class="truncate">Generate</span>
               </button>
             </div>
           </div>
@@ -199,6 +200,7 @@
         </footer>
       </div>
     </div>
+  </form>
 
 
     <script>
@@ -236,6 +238,11 @@
           console.error('Data source element not found');
         }
       });
+
+
+
+
+
 
       function submitForm() {
         // Get form values
