--- a/templates/index - Copy.html
+++ b/templates/index - Copy.html
@@ -43,7 +43,7 @@
               <a class="text-[#FFFFFF] text-sm font-medium leading-normal" href="#">Home</a>
               <a class="text-[#FFFFFF] text-sm font-medium leading-normal" href="#">About</a>
               <a class="text-[#FFFFFF] text-sm font-medium leading-normal" href="#">Services</a>
-              <a class="text-[#FFFFFF] text-sm font-medium leading-normal" href="#">Contact</a>
+              <a class="text-[#FFFFFF] text-sm font-medium leading-normal" href="https://rpplind.com/">Contact</a>
             </div>
             <div class="flex gap-2">
               <button
@@ -66,7 +66,7 @@
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
             <!-- File Upload 1 -->
               <label for="file1" class="flex flex-col min-w-40 flex-1">
-                <p class="text-[#FFFFFF] text-base font-medium leading-normal pb-2">Upload File 1:</p>
+                <p class="text-[#FFFFFF] text-base font-medium leading-normal pb-2">Upload Driver 1:</p>
                 <input
                   placeholder="Upload File 1" type="file" name="file1" id="file1" accept=".csv" required
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#FFFFFF] focus:outline-0 focus:ring-0 border border-[#3D3D3D] bg-[#242424] focus:border-[#3D3D3D] h-14 placeholder:text-[#999999] p-[15px] text-base font-normal leading-normal"
@@ -76,7 +76,7 @@
             </div>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
-                <p class="text-[#FFFFFF] text-base font-medium leading-normal pb-2">Upload File 2:</p>
+                <p class="text-[#FFFFFF] text-base font-medium leading-normal pb-2">Upload Driver 2:</p>
                 <input
                   placeholder="Upload File 2" type="file" name="file2" id="file2" accept=".csv" required
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#FFFFFF] focus:outline-0 focus:ring-0 border border-[#3D3D3D] bg-[#242424] focus:border-[#3D3D3D] h-14 placeholder:text-[#999999] p-[15px] text-base font-normal leading-normal"
@@ -194,7 +194,7 @@
                   </div>
                 </a>
               </div>
-              <p class="text-[#999999] text-base font-normal leading-normal">© 2023 Racing Car Data Analytics</p>
+              <p class="text-[#999999] text-base font-normal leading-normal">© 2024 Indian Racing Analytics, Prashant Kumar</p>
             </footer>
           </div>
         </footer>
